k8s/overlays/production/server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
      - name: server
        image: extheoisah/hxckr-core:prod
