k8s/overlays/production/softserve-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softserve
spec:
  template:
    spec:
      containers:
      - name: softserve
        ports:
        - containerPort: 23231
        - containerPort: 23232
        - containerPort: 23233
        - containerPort: 9418
